fixed aligning of container items

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,7 +73,7 @@ p {
   left: 50%;
   top: 50%;
   width: 400px;
-  margin-top: -100px;
+  margin-top: -200px;
   margin-left: -200px;
 }
 
